crates/moa-providers/tests/snapshots/openai_responses_envelope__openai_responses_request_serializes_with_separate_instructions_and_input_fields.snap
---
source: crates/moa-providers/tests/openai_responses_envelope.rs
expression: value
---
{
  "input": [
    {
      "content": "Inspect Cargo.toml and report the provider crate name.",
      "role": "user",
      "type": "message"
    }
  ],
  "instructions": "Follow the workspace policy.\n\nPrefer read-only inspection before edits.",
  "max_output_tokens": 256,
  "model": "gpt-5.4-mini",
  "parallel_tool_calls": true,
  "prompt_cache_key": "moa:gpt-5.4-mini:27440f1910bfd682",
  "prompt_cache_retention": "in_memory",
  "reasoning": {
    "effort": "medium"
  },
  "store": false,
  "stream": true,
  "tool_choice": "auto",
  "tools": [
    {
      "description": "Read a UTF-8 file from the workspace.",
      "name": "file_read",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "path": {
            "description": "Workspace-relative path",
            "type": "string"
          }
        },
        "required": [
          "path"
        ],
        "type": "object"
      },
      "strict": true,
      "type": "function"
    }
  ]
}
