crates/moa-providers/tests/snapshots/openai_responses_envelope__openai_responses_request_with_previous_response_id_chains_state_correctly.snap
---
source: crates/moa-providers/tests/openai_responses_envelope.rs
assertion_line: 159
expression: value
---
{
  "input": [
    {
      "content": "Inspect Cargo.toml and report the provider crate name.",
      "role": "user",
      "type": "message"
    }
  ],
  "instructions": "Follow the workspace policy.\n\nPrefer read-only inspection before edits.",
  "max_output_tokens": 256,
  "model": "gpt-5.4-mini",
  "parallel_tool_calls": true,
  "previous_response_id": "resp_previous_123",
  "prompt_cache_key": "moa:gpt-5.4-mini:9eb5d625998be69f",
  "prompt_cache_retention": "in_memory",
  "reasoning": {
    "effort": "medium"
  },
  "store": false,
  "stream": true,
  "tool_choice": "auto",
  "tools": [
    {
      "description": "Read a UTF-8 file from the workspace.",
      "name": "file_read",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "path": {
            "description": "Workspace-relative path",
            "type": "string"
          }
        },
        "required": [
          "path"
        ],
        "type": "object"
      },
      "strict": true,
      "type": "function"
    }
  ]
}
